# easy-mcu

./: .gitignore  CMakeLists.txt  README.md  SoftTimers.c  SoftTimers.h  intergate_test.c
AtProtocol/: AtConfig.h  AtProtocal_test.c  AtProtocol.h  CMakeLists.txt  GlobalDef.h
AtProtocol/AtProtocal_test/: AtCmdHashTable.c  AtCmdHashTable.h  AtKeyHashTable.c  AtKeyHashTable.h
AtProtocol/AtProtocal_test/Scripts/: AtCommandGenerator.py  AtKeyGenerator.py  AtSupport.py  build.sh
AtProtocol/Scripts/: AtCommandGenerator.py  AtKeyGenerator.py  AtSupport.py  at_cmd.csv  build.sh  config_target_name.sh
AtProtocol/Src/: AtProtocol.c
AtProtocol/Src/At_HashTable/: AtCmdHashTable.c  AtCmdHashTable.h  AtKeyHashTable.c  AtKeyHashTable.h
AtProtocol/Src/At_internal/: AtFsm.c  AtFsm.h  AtInternalConfig.h  AtUtils.c  AtUtils.h
AtProtocol/Src/At_internal/StateMachine/: stateMachine.c  stateMachine.h
CmdProtocol/: CMakeLists.txt  CmdLine.c  CmdLine.h  CmdLineConfig.h  CmdlineRegister.c
Include/: Common.h
TestCase/: AtProtocal_main.c  AtProtocal_test.c  CMakeLists.txt  cmdline_main.c  utils_main.c
easy_shell/: CMakeLists.txt  dictionary.c  dictionary.h  easy_shell.c  easy_shell.h  easy_shell_test.c  shell_cmd.c  shell_config.h
reg_config/: 190604_CXD3554GG_register_setting_SXRD241_60Hz (E).xlsx  220425[Appotronics]_CXD3554GG_register_setting_241Bgam_8time_RRGGBBGG_700Mbps_60Hz.xlsx  CMakeLists.txt  cxd3554.c  cxd3554.h  cxd3554_header_file_create.py  cxd3554_source_file_create.py  main.c  make.py  misc.c  misc.h
simple_file/: CMakeLists.txt  file.c  file.h  file_test.c
utils/: CMakeLists.txt  sort.c  sort.h  utilsAsciiConvert.c  utilsAsciiConvert.h  utils_test.c
utils/AsciiConvert/: CMakeLists.txt  utilsAsciiConvert.c  utilsAsciiConvert.h
utils/Include/: log.h  summary.h
utils/event_group/: event_group.c  event_group.h
utils/sort/: CMakeLists.txt  sort.c  sort.h
z-test-cmdline/: CMakeLists.txt  main.c
z-test-utils/: CMakeLists.txt  main.c
